# MIA_1S2026_P2_202112092

./: README.md
PROYECTO 2/Backend/: CMakeLists.txt
PROYECTO 2/Backend/include/: CommandParser.hpp  DiskManager.hpp  Structures.hpp
PROYECTO 2/Backend/include/commands/: cat.hpp  chgrp.hpp  chmod.hpp  chown.hpp  copy.hpp  exec.hpp  fdisk.hpp  find.hpp  journaling.hpp  login.hpp  loss.hpp  mkdir.hpp  mkdisk.hpp  mkfile.hpp  mkfs.hpp  mkgrp.hpp  mkusr.hpp  mount.hpp  mount_table.hpp  mounted.hpp  move.hpp  remove.hpp  rename.hpp  rep.hpp  rmdisk.hpp  rmgrp.hpp  rmusr.hpp  unmount.hpp
PROYECTO 2/Backend/include/ext2/: Bitmap.hpp  Ext2Layout.hpp  Ext2Structs.hpp
PROYECTO 2/Backend/include/ext3/: Ext3Layout.hpp  journal.hpp
PROYECTO 2/Backend/include/fs/: AuthGuard.hpp  Session.hpp
PROYECTO 2/Backend/include/reports/: block_report.hpp  bm_bloc_report.hpp  bm_inode_report.hpp  disk_report.hpp  file_report.hpp  inode_report.hpp  ls_report.hpp  mbr_report.hpp  sb_report.hpp  tree_report.hpp
PROYECTO 2/Backend/src/: CommandParser.cpp  DiskManager.cpp  main.cpp
PROYECTO 2/Backend/src/commands/: cat.cpp  chgrp.cpp  chmod.cpp  chown.cpp  copy.cpp  exec.cpp  fdisk.cpp  find.cpp  journaling.cpp  login.cpp  loss.cpp  mkdir.cpp  mkdisk.cpp  mkfile.cpp  mkfs.cpp  mkgrp.cpp  mkusr.cpp  mount.cpp  mount_table.cpp  mounted.cpp  move.cpp  remove.cpp  rename.cpp  rep.cpp  rmdisk.cpp  rmgrp.cpp  rmusr.cpp  unmount.cpp
PROYECTO 2/Backend/src/ext2/: Bitmap.cpp
PROYECTO 2/Backend/src/ext3/: journal.cpp
PROYECTO 2/Backend/src/reports/: block_report.cpp  bm_bloc_report.cpp  bm_inode_report.cpp  disk_report.cpp  (+6 more)
(+7 files in other folders)
